<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.caciocavallosilano</groupId>
    <artifactId>cacio</artifactId>
    <version>1.11</version>
  </parent>
  <artifactId>cacio-tta</artifactId>
  <packaging>jar</packaging>
  <name>CacioTAA Java Module</name>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
    </dependency>
    <dependency>
      <groupId>com.github.caciocavallosilano</groupId>
      <artifactId>cacio-shared</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-swing-junit</artifactId>
      <version>3.9.2</version>
    </dependency>
    <dependency>
      <groupId>com.jidesoft</groupId>
      <artifactId>jide-oss</artifactId>
      <version>3.5.11</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <compilerArgs>
            <arg>-XDignore.symbol.file=true</arg>
            <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
